# annex

./: .gitignore  Cargo.toml  Justfile  Makefile  README.md  annex.code-workspace  justfile
.cargo/: config.toml
docs/: gui.md  risc-v.md
src/: acpi.rs  allocator.rs  apic.rs  clint.rs  cmos.rs  colour.rs  csr.rs  gdt.rs  gui.rs  hpet.rs  interrupts.rs  lib.rs  log.rs  logger.rs  main.rs  memory.rs  paging.rs  panic.rs  pic.rs  plic.rs  screen.rs  serial.rs  test.rs  timer.rs  user.rs
src/acpi/: madt.rs  rsdp.rs  rsdt.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs  mod.rs
src/asm/: boot.S
src/gui/: colour.rs  mod.rs  screen.rs
src/hardware/: keyboard.rs  serial.rs
src/lds/: virt.lds
src/multitasking/: context_switch.rs  scheduler.rs  thread.rs
src/riscv/: instructions.rs
src/task/: executor.rs  keyboard.rs  simple_executor.rs
src/threading/: mod.rs  scheduler.rs  thread.rs
src/user/: line_edit.rs  shell.rs  terminal.rs
src/utils/: font.rs  line_edit.rs  mod.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
