[package]
name = "annex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acpi = "4.1.0"
bootloader = "0.10.12"
conquer-once = { version = "0.3.2", default-features = false }
lazy_static = { version = "1.4.0", features = [
    "spin_no_std",
], default-features = false }
linked_list_allocator = { version = "0.9.1", optional = true }
noto-sans-mono-bitmap = { version = "0.1.5", features = [
    "regular",
    "size_14",
], default-features = false }
pc-keyboard = "0.5.1"
pic8259 = "0.10.2"
spin = { version = "0.9.3", features = [
    "spin_mutex",
], default-features = false }
uart_16550 = "0.2.18"
x2apic = "0.4.0"
x86_64 = "0.14.9"

[features]
allocator_bump = []
allocator_fixed_size = ["dep:linked_list_allocator"]
allocator_linked_list = []
allocator_linked_list_external = ["dep:linked_list_allocator"]
default = ["allocator_fixed_size"]

[package.metadata.bootloader]
#minimum-framebuffer-height = 500
minimum-framebuffer-width = 800
map-physical-memory = true

[profile.release]
debug = true


[[test]]
name = "should_panic"
harness = false


[[test]]
name = "stack_overflow"
harness = false
