[package]
name = "annex-risc-v"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fdt = "0.1.4"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = "0.4.17"
sbi = "0.2.0"
spin = { version = "0.9.4", default-features = false, features = [
    "spin_mutex",
] }
uart_16550 = "0.2.18"

[profile.dev]
panic = "abort"
